# pastries

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: command.rs  configuration_manager.rs  dependency.rs  dependency_manager.rs  main.rs  table.rs
