[package]
name = "pastries"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
file_diff = "1.0.0"
futures = "0.3.31"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }

[dev-dependencies]
serial_test = "3.2.0"
tempdir = "0.3.7"
